devopszon-dev/shopping-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: shopping-api-ingress
  namespace: shopping
spec:
  ingressClassName: nginx
  rules:
  - host: www.shoppingapitest.com
    http:
      paths:
      - backend:
          service:
            name: shopping-api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.shoppingapitest.com
    secretName: shopping-api-ingress-secret
